# heimdall

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO_list  ahmad.txt  basic_test  cmake_install.cmake  go.sh  install_manifest.txt  syscall-sensor
aux/: .command_line_parser.h.swp  .gitignore  BACKUP_command_line_parser.cpp  Makefile  ascii_operations.cpp  ascii_operations.h  command_line_parser.cpp  command_line_parser.h  daemonizer.h  launcher.cpp  main  main.cpp  sensor_manager.cpp  sensor_manager.h
debug/: massif.out.24288  massif.out.24291  massif.out.24292  massif.out.24293  massif.out.24294  massif.out.4384.stack  massif.out.4923  massif.out.4928  massif.out.7468  massif.out.7473
doc/uml/: heimdall.dia
include/data_records/: data_record.h  record_factory.h
include/interfaces/: data_stream.h  sensor_observer.h
include/sensor_data/: sensor_data.h
include/sensor_observers/: sensor_observer.h  syscall_logger.h
include/sensor_observers/data_records/: data_record.h  record_factory.h
include/sensor_observers/data_records/linux/: linux_record_factory.h  linux_syscall_record.h
include/sensor_observers/data_streams/: data_stream.h  output_stream.h
include/sensors/: sensor.h
include/sensors/syscall_sensors/: .syscall_sensor.h.swp  syscall_sensor.h
include/sensors/syscall_sensors/syscall_readers/: linux_syscall_reader.h  (+2 more)
manual/syscall-sensor/: syscall-sensor.1  syscall-sensor.man
scripts/: .gitignore  freq.sh  sanitycheck.sh  unique.sh
src/TEST_executables/: README
src/TEST_executables/daemon_utils/: daemonizer.h
src/TEST_executables/syscall_sensor/: sensor_launcher.h
src/basic_sensor/command_line_utils/: command_line_parser.cpp  command_line_parser.h
src/basic_sensor/sensor_manager/: sensor_manager.h
src/executables/: CMakeLists.txt  README  detector_launcher.cpp  launcher.cpp
src/executables/command_line_utils/: command_line_parser.cpp
src/executables/detector_command_line_utils/: CMakeLists.txt  command_line_parser.cpp
src/executables/detector_manager/: CMakeLists.txt  detector_manager.cpp  detector_manager.h
src/executables/sensor_command_line_utils/: command_line_parser.cpp  command_line_parser.h
src/executables/sensor_manager/: CMakeLists.txt  sensor_manager.cpp  sensor_manager.h
src/executables/sensor_manager/daemon_utils/: daemonizer.cpp
src/queues/: readerwriterqueue.h  tmp_readerwriterqueue.h
src/sensor_data/: CMakeLists.txt  Makefile  cmake_install.cmake  sensor_data.cpp  sensor_data.cxx  sensor_data.h
src/sensor_observers/: .gitignore  .sensor_observer.h.swp  .syscall_logger.cpp.swp  .syscall_logger.h.swp  CMakeLists.txt  Makefile  cmake_install.cmake  sensor_observer.h  syscall_logger.cpp  syscall_logger.cxx  syscall_logger.h
src/sensor_observers/data_records/: CMakeLists.txt  Makefile  cmake_install.cmake  data_record.cpp  data_record.h  record_factory.cpp  system_call_record.h
src/sensor_observers/data_records/linux/: CMakeLists.txt  Makefile  cmake_install.cmake  linux_syscall_record.cpp  linux_syscall_record.cxx  linux_syscall_record.h
src/sensor_observers/data_streams/: CMakeLists.txt  Makefile  cmake_install.cmake  data_stream.h  output_stream.cpp  output_stream.cxx  output_stream.h  regex_stream.cpp  regex_stream.h
src/sensor_observers/detectors/: .gitignore  .ngram_generator.h.swp  .support_vector_generator.h.swp  .syscall_detector.cpp.swp  .syscall_detector.h.swp  .trace_window.h.swp  CMakeLists.txt  Syscalls.txt  data_point_generator.h  ngram_generator.cpp  ngram_generator.h  support_vector_generator.cpp  support_vector_generator.h  svm_module.h  syscall_detector.cpp  syscall_detector.h  test  trace_detector.h  trace_reader.cpp  trace_reader.h  trace_window.cpp  trace_window.h
src/sensor_observers/detectors/linux/syscall_formatters/: CMakeLists.txt  syscall_formatter.cpp  syscall_formatter.h  syscall_formatter_interface.h
src/sensor_observers/detectors/linux/syscall_formatters/arch/arm/: arm_syscall_formatter.cpp  arm_syscall_formatter.h
src/sensor_observers/detectors/linux/syscall_formatters/arch/mips/: mips_n32_syscall_formatter.cpp  mips_n32_syscall_formatter.h  mips_n64_syscall_formatter.cpp  mips_n64_syscall_formatter.h  mips_o32_syscall_formatter.cpp  mips_o32_syscall_formatter.h  mips_syscall_formatter.cpp  mips_syscall_formatter.h
src/sensor_observers/detectors/svm_modules/: .one_class_svm.cpp.swp  .svm_module.h.swp  CMakeLists.txt  one_class_svm.cpp  one_class_svm.h  svm_module.cpp  svm_module.h
src/sensor_observers/detectors/svm_modules/stopping_criteria/: stopping_criterion.h  training_counter.cpp  training_counter.h  training_timer.cpp  training_timer.h
src/sensor_observers/detectors/syscall_formatters/: syscall_formatter.cpp
src/sensor_observers/detectors/syscall_formatters/arch/arm/: arm_syscall_formatter.cpp  arm_syscall_formatter.h
src/sensor_observers/detectors/syscall_formatters/arch/mips/: mips_syscall_formatter.cpp  mips_syscall_formatter.h
src/sensor_program/: CMakeLists.txt  Makefile  cmake_install.cmake  launcher.cpp
src/sensor_program/command_line_utils/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  command_line_parser.cpp  command_line_parser.h
src/sensor_program/sensor_manager/: CMakeLists.txt  Makefile  cmake_install.cmake  sensor_manager.cpp  sensor_manager.h
src/sensors/: sensor.h
src/sensors/syscall_sensors/: .syscall_sensor.cpp.swp  CMakeLists.txt  Makefile  cmake_install.cmake  syscall_sensor.cpp  syscall_sensor.cxx  syscall_sensor.h  syscall_sensor.h.gch
src/tests/: CMakeCache.txt  CMakeLists.txt  Makefile  basic_test.cpp  basic_test.cxx  cmake_install.cmake
src/trace_detector/: trace_detector.cpp  trace_detector.h
src/utils/: CMakeLists.txt  Makefile  ascii_operations.cpp  ascii_operations.cxx  ascii_operations.h  cmake_install.cmake  command_line_parser.cpp  command_line_parser.h  directory_handler.cpp  directory_handler.h  main.cpp  test  thread_manager.h
syscall-detector/: .gitignore  CMakeLists.txt
syscall-sensor/: .gitignore  CMakeLists.txt
test/: basic_test
uml/: heimdall.dia
(+21 files in other folders)
